# news-in-brief

./: CNAME  README.md  analyze_sources.py  config.py  feeds.toml  index.html  llm.py  main.py  news.py  pyproject.toml  render.py  rss.py  rss.xml
.github/workflows/: generate_briefing.yml  schedule_italy_today.yml
artifacts/2025-12-09/: 2025-12-09-sources.parquet
artifacts/2025-12-10/: 2025-12-10-script.md
artifacts/2025-12-11/: 2025-12-11-sources.parquet
artifacts/2025-12-12/: 2025-12-12-script.md
asia-in-brief/: index.html  rss.xml  show.toml
asia-in-brief/artifacts/2025-12-09/: 2025-12-09-script.md
asia-in-brief/artifacts/2025-12-10/: 2025-12-10-sources.parquet
asia-in-brief/artifacts/2025-12-11/: 2025-12-11-script.md
asia-in-brief/artifacts/2025-12-12/: 2025-12-12-sources.parquet
core/: __init__.py  analyzer.py  config.py  embeddings.py  news.py  render.py  rss.py  site.py  sources_view.py  tts.py
italy-today/: index.html  rss.xml  show.toml
italy-today/artifacts/2025-12-15/: 2025-12-15-script.md  2025-12-15-sources.parquet
italy-today/artifacts/2025-12-16/: 2025-12-16-script.md  2025-12-16-sources.parquet
italy-today/artifacts/2025-12-17/: 2025-12-17-script.md  2025-12-17-sources.parquet
italy-today/artifacts/2025-12-18/: 2025-12-18-script.md  2025-12-18-sources.parquet
italy-today/artifacts/2025-12-19/: 2025-12-19-script.md  (+1 more)
italy-today/prompts/: system_prompt.j2  user_message.j2
prompts/: system_prompt.j2  user_message.j2
scripts/: benchmark_embeddings.py  generate_embeddings.py
templates/: show_index.html.j2  stories.md.j2
(+189 files in other folders)
