[project]
name = "news-in-brief"
version = "0.1.0"
description = "AI-narrated news briefs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=2.26.1",
    "feedgen>=1.0.0",
    "feedparser>=6.0.12",
    "google-genai>=1.56.0",
    "jinja2>=3.1.6",
    "mutagen>=1.47.0",
    "openai>=2.9.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "typer>=0.20.0",
]
